--- a/LSTM-Autoencoder.ipynb
+++ b/LSTM-Autoencoder.ipynb
@@ -54,11 +54,7 @@
     }
    ],
    "source": [
-    "data.iloc[:timesteps = 30\n",
-    "input_dim = data.shape[1]\n",
-    "latent_dim = 3\n",
-    "n_epoch = 30\n",
-    "n_batch = 10,6:].plot()"
+    "data.iloc[:,6:].plot()"
    ]
   },
   {
