--- a/LSTM_Autoencoder_Repeatvector_KDD99.ipynb
+++ b/LSTM_Autoencoder_Repeatvector_KDD99.ipynb
@@ -615,6 +615,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(16467, 10)"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "encoded_dataset.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
