fixed a small bug

--- a/KDDCup99Dataset_split_to_6subsets.ipynb
+++ b/KDDCup99Dataset_split_to_6subsets.ipynb
@@ -128,19 +128,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
     "#normal = data[(data.label==\"smurf.\") | (label==\"normal.\")].iloc[:,:-1]\n",
     "#anomaly = data[(data.label!=\"smurf.\") & (label!=\"normal.\")].iloc[:,:-1]\n",
-    "normal = data.iloc[np.array(n_list),:]\n",
-    "anomaly = data.iloc[np.array(a_list),:]"
+    "normal = data.iloc[np.array(n_list),:-1]\n",
+    "anomaly = data.iloc[np.array(a_list),:-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 137,
    "metadata": {
     "collapsed": true
    },
@@ -180,6 +180,15 @@
     "va.to_csv(root+\"validation_anomaly.csv\",index=None,header=None)\n",
     "ta.to_csv(root+\"test_anomaly.csv\",index=None,header=None)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
