--- a/KDDCup99Dataset_split_to_6subsets.ipynb
+++ b/KDDCup99Dataset_split_to_6subsets.ipynb
@@ -102,7 +102,7 @@
    "outputs": [],
    "source": [
     "# split data according to window length\n",
-    "L = 20\n",
+    "L = 20  # the step_num decided by the LSTM model\n",
     "n_list = []\n",
     "a_list = []\n",
     "temp = []\n",
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 138,
    "metadata": {
     "collapsed": true
    },
