model reload problem
add is_training argument in EncDecAD class

--- a/KDDCup99Dataset_split_to_6subsets.ipynb
+++ b/KDDCup99Dataset_split_to_6subsets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -74,7 +74,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#if without scaling\n",
+    "#cont = continuous.as_matrix()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -86,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -97,8 +107,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# split data according to window length\n",
@@ -128,8 +140,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#normal = data[(data.label==\"smurf.\") | (label==\"normal.\")].iloc[:,:-1]\n",
@@ -140,8 +154,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "x = int(normal.shape[0]/20)\n",
@@ -153,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -166,13 +182,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "root = \"C:/Users/Bin/Documents/Datasets/KDD99/6_subsets_win/\"\n",
+    "root = \"C:/Users/Bin/Documents/Datasets/KDD99/6_subsets_win_unscaled/\"\n",
     "sn.to_csv(root+\"training_normal.csv\",index=None,header=None)\n",
     "vn1.to_csv(root+\"validation_1.csv.csv\",index=None,header=None)\n",
     "vn2.to_csv(root+\"validation_2.csv.csv\",index=None,header=None)\n",
