--- a/KDDCup99Dataset_split_to_6subsets.ipynb
+++ b/KDDCup99Dataset_split_to_6subsets.ipynb
@@ -75,7 +75,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#if without scaling\n",
