--- a/KDD99 Statistic.ipynb
+++ b/KDD99 Statistic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -34,7 +34,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "labels = []\n",
+    "for chunk in pd.read_csv(filename, chunksize=10000):\n",
+    "    labels += list(chunk.iloc[:,-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.legend.Legend at 0x157fb3ff320>"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAABBUAAAF1CAYAAAC3TdL6AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAAIABJREFUeJzt3X+4XmV5J/rvDUmBQhAhaY8GYuy0\nWmYMFRrEAm21zlGotaU99UdVOGiFa0ascjXn1OrMKEPH69KpojDOVDmm1NpUxyJTBLRVDzgto1gT\noCDGcmqFkoHRgOWnpBq4zx/vStxs82NnZce92f18rmtfefdaz3rW/b57/ZH3u57nWdXdAQAAANhT\n+811AQAAAMDjk1ABAAAAGEWoAAAAAIwiVAAAAABGESoAAAAAowgVAAAAgFGECgAwQlW9oqo+NfLY\nW6rqObNcz9Or6oaqeqCqXj+bff9TVFV/UFX/Ya7rAID5TqgAwIJUVSdX1eeq6r6q+mZV/Y+qOn7Y\nd2ZVXbsHfa2sqq6qRdu2dfe67n7+DI79ni+n3f0vuvuze/B2ZuK3kny2u5d090U7qOMlw+fxrar6\nnnNX1TOrasOwf0NVPXPKvpdX1V1V9bWpYUhV/bOhz/2nbHtOVW2a8vsPVNVlw+d/aFWdV1XfGcKP\nB6rq1qp6b1U9aVofj1bVg8PPpqr66La/35R2J1bVXw393FRVJ0/ZV1X1b6rq76vq/qr6SFUdOuqT\n3Y2q+mxVvWZf9D0X5wGAPSFUAGDBGb48XpnkPyU5PMnyJP8+yT/OZV372FOS3LKL/d9M8p4kb5++\no6p+IMnlSf4oyROTfDDJ5UMgsGg45rgkv5HkvVMOvSjJb3b3Izs6YVUdkOSyJIcleX533z/s+q/d\nvSSTv80vJ/nfkmyYGiwkubO7D0myJMmzk3wlyV9W1fOGvg9P8vEkvzv0/x+TXFFVTxyOPyPJ6UlO\nSvLkJAdlcj0AALNIqADAQvS0JOnuD3f3I939cHd/qrtvqqqjk7wvyU8Nd8HvTZKqeuEwfeD+qrqj\nqs6b0t9fDP/eOxzzU1NHOwx3xd9dVd8YRkbcVFXPqKqzk7wiyW8Nx10xtL+tqv7l8Hr/qnpzVX11\nuOO+oaqO2tGbqqpfHKZO3DvctT562H51kucmee9wnqdNP7a7P9PdH01y5w66fk6SRUne093/OIx0\nqCQ/l+SIJP+zu+9K8pkkPzKc81eH7dftpNYfTHJFksVJXtjdD+2gpu909y1JXppkc5I1O2jT3b2p\nu9+S5ANJ3jHsOjHJ17v7T4a/8R8NffzKsP9FSdZ29x3d/eBw3EuHunZU77FVdf3wN/ivSQ6csu+J\nVXVlVW2uqn8YXh857Htbkp/Odz/79w7bLxyuo/uHv+lPT+nvWVW1ftj39aq6YMq+Zw+jP+6tqr/e\nNjJkZ+cBgLkmVABgIbo1ySNV9cGqOnXK3et098Yk/yrJ57v7kO4+bNj1UCZ3tw9L8sIk/7qqThv2\n/czw72HDMZ+fdr7nD22eNhz/0iT3dPfFSdYl+Y/DcS/aQa2/meTXkvx8kkOTvDrJt6Y3GoKCDyc5\nN8myJJ/I5M78D3T3zyX5yySvG85z6ww/p23+RZKburunbLtp2L45yRHDl+j/PcktVXVIkn+b5E07\n6e+AJJ9MsiXJL3b3w7s6+TDS4fJMvjTvymVJjquqgzMJPWra/kryjCmva9q+A5L82PROh5Eaf5rk\nQ5mMnviTJP/HlCb7Jbkkk9EgK5I8nGHERnf/mzz2s3/dcMwXkzxz6O+Pk/xJVW0LKi5McmF3H5rk\nnyX56FDH8iRXJfkPw3H/V5KPVdWyXZwHAOaUUAGABWcYZn9ykk7y/yTZXFUfr6of3sUxn+3um7v7\n0e6+KZMv8D87w1N+J5Nh+j+epLp743BnfyZek+TfdvffDHfl/7q779lBu5cmuaq7P93d30nyzkyG\n9J84w/PsyiFJ7pu27b4kS7r70ST/OsmlmXzJPSvJ+ZlMJVhVVddU1Z9X1TOmHLskyU8l+WB3z3TK\nyZ2ZfJHeXZvKJLj5XJInV9WvVdXiqvo/M/mCvm0kwieTvKYm62E8Ickbh+07Gqnw7ExGVLxnGD1x\naSahQJKku+/p7o9197e6+4Ekb8turo3u/qPhuK3d/a5MAo2nD7u/k+RHq2ppdz84ZbTHK5N8ors/\nMVyHn06yPpPACQDmJaECAAvS8MX+zO4+MpO710/OZE2BHaqqE4YvyJur6r5MRjMsneG5rs7kzvV/\nTvL1qrp4DxYFPCrJV2fQ7slJbp9yzkeT3JHJehF768FMRklMdWiSB4Zz/b/d/ezu/tkkjyZZneQP\nMrmzf2aS38lkasI2dyd5WZIPVtULZljD8kzWfdhdm05y7xC8/FImIz2+nuSUTKZnbFsk8vczCYY+\nm8laE9cM2zflez05k6kcU0dqbP+sq+oHq+r9VXV7Vd2fyXSYw2rKApXTVdWaqto4TIe5N8kT8t3r\n6dczGdXylar6YlX9wrD9KUlePEx9uHc47uQkT/qeEwDAPCFUAGDB6+6vZPIleNvd9N5Bsz/OZOG/\no7r7CZmsu1C7aD/9HBd1909mMmXgaUn+7xkee0cmd9h3585MvnQmmazjkEkg8T9ncOzu3JLkmKHP\nbY7JtIUfh/3vTfL6TL4g79/dt2dyV/+YqW27+7JMRjVcWlXP3dXJq2q/TNZA+Mvd1PnLSa7ftj5D\nd//37j6+uw/PZFHGpyf5q2Hfo9391u5eOQRLt2TyWe3o87oryfJp73/FlNdrhr5PGKYsbJsOs8Pr\nY1g/4Y1JXpLkicMUm/u2te/u/6+7fy3JD2Wy1sOlw5SOO5J8qLsPm/JzcHe/fUfnAYD5QKgAwIJT\nVT8+3CnetpjeUZmsW7BtmPnXkxw5zKXfZkmSb3b3lqp6VpKXT9m3OZM79D+yk/MdP4x0WJzJ2gxb\nkmx7IsLXd3bc4ANJfqeqfqwmjqmqI3bQ7qNJXlhVzxvOsyaTp1l8bhd9T61x/2FO/6Ik+1XVgUM/\nyeRu/iNJXl9VB1TVtvn6V0/r5jVJbujuG5Pck+SgqvrnmSwS+XfTz9ndH07yukyeJHHSDmpaPCw2\n+eFMngBxwQ7aVFUtr6q3Dud/85R9xw59HJrJdJBN3f3nw77Da/LIyxpqvCDJ+cMIj+k+n2Tr8P4X\nVdWvJHnWlP1LMllH4d6aPHXirdOOn/43XjL0tznJoqp6S6aMBKmqVw7rJDya5N5h8yOZPH3jRVX1\ngm1/r5o8XvPInZwHAOacUAGAheiBJCck+UJVPZRJmPClfPfpAldncuf6f1XV3cO21yY5v6oeSPKW\nDIvnJUl3fyuTefT/YxiW/uxp5zs0k7Ub/iGTYfP3ZPIlN0nWJvnnw3F/uoNaLxjO9akk9w/tD5re\nqLv/JpM59/8pk+kFL0ryou7+9ow+kcmd/IeT/F4mCyI+PNScoY/TMlmo8t5MFos8bWrfVbU0yRuS\n/LvhmK2ZBAZXZzKq4zd2dNLu/mAmn/tVQ1iTTJ7C8OBwro9n8nn9ZHdPfTLFk4c2D2YyEmJVkud0\n96emtPmt4bO4I5MpAr88Zd/STBazfCiT9RV+f1g4c0c1fjuTp0acmcnf8KWZLAq5zXsy+Zvcncm1\n9GfTurgwya/W5MkQFyX58+Gct2ZyPWwZatzmlEwWvHxwOPZl3b2lu+/IZErHmzMJJO7IZMTLfjs5\nDwDMuXrs9EEAAACAmTFSAQAAABhFqAAAAACMIlQAAAAARhEqAAAAAKMIFQAAAIBRFs3ViZcuXdor\nV66cq9MDAAAAO7Fhw4a7u3vZ7trNWaiwcuXKrF+/fq5ODwAAAOxEVd0+k3amPwAAAACjCBUAAACA\nUYQKAAAAwChztqYCAAAA7Gvf+c53smnTpmzZsmWuS5mXDjzwwBx55JFZvHjxqOOFCgAAACxYmzZt\nypIlS7Jy5cpU1VyXM690d+65555s2rQpT33qU0f1YfoDAAAAC9aWLVtyxBFHCBR2oKpyxBFH7NUo\nDqECAAAAC5pAYef29rMRKgAAAMA+VFVZs2bN9t/f+c535rzzzvu+1nDmmWfm0ksvnfV+rakAAADA\nPxkrf/uqWe3vtre/cLdtDjjggFx22WV505velKVLl+7xObZu3ZpFi+bn1/fdVlVVByb5iyQHDO0v\n7e63TmtzQJI/TPKTSe5J8tLuvm3WqwUAAIDHmUWLFuXss8/Ou9/97rztbW97zL7bb789r371q7N5\n8+YsW7Ysl1xySVasWJEzzzwzhx9+eG644YYcd9xxWbJkSb72ta/lrrvuyq233poLLrgg1113XT75\nyU9m+fLlueKKK7J48eKcf/75ueKKK/Lwww/nxBNPzPvf//59Ov1jJtMf/jHJz3X3TyR5ZpJTqurZ\n09r8epJ/6O4fTfLuJO+Y3TIBAADg8eucc87JunXrct999z1m++te97qcccYZuemmm/KKV7wir3/9\n67fvu/XWW/OZz3wm73rXu5IkX/3qV3PVVVfl8ssvzytf+co897nPzc0335yDDjooV1111fb+vvjF\nL+ZLX/pSHn744Vx55ZX79H3tNlToiQeHXxcPPz2t2S8l+eDw+tIkzysrYQAAAECS5NBDD80ZZ5yR\niy666DHbP//5z+flL395kuT000/Ptddeu33fi1/84uy///7bfz/11FOzePHirFq1Ko888khOOeWU\nJMmqVaty2223JUmuueaanHDCCVm1alWuvvrq3HLLLfv0fc1oUkZV7Z9kQ5IfTfKfu/sL05osT3JH\nknT31qq6L8kRSe6e1s/ZSc5OkhUrVuxd5XNktuffALDvzGSOIwDzxHlPmOsKWKhe8NHkzvGPTNyt\nO2/Y9f4nH7v95bnnnpvjjjsur3rVq3bafOr9+YMPPvgx+w444IAkyX777ZfFixdvb7vffvtl69at\n2bJlS1772tdm/fr1Oeqoo3Leeeft1eMiZ2JGT3/o7ke6+5lJjkzyrKp6xrQmOxqVMH00Q7r74u5e\n3d2rly1btufVAgAAwOPU4Ycfnpe85CVZu3bt9m0nnnhiPvKRjyRJ1q1bl5NPPnl0/9sChKVLl+bB\nBx/cJ097mG6PHinZ3fcm+WySU6bt2pTkqCSpqkVJnpDkm7NQHwAAACwYa9asyd13f3dQ/0UXXZRL\nLrkkxxxzTD70oQ/lwgsvHN33YYcdlrPOOiurVq3KaaedluOPP342St6l6v6eAQWPbVC1LMl3uvve\nqjooyaeSvKO7r5zS5pwkq7r7X1XVy5L8Sne/ZFf9rl69utevX7/37+D7zPQHgMcP0x8AHkdMf2Af\n2fiCj+bop/zQ3BUwZfrDfLVx48YcffTRj9lWVRu6e/Xujp3JmgpPSvLBYV2F/ZJ8tLuvrKrzk6zv\n7o8nWZvkQ1X1t5mMUHjZnr4JAAAA4PFlt6FCd9+U5Huile5+y5TXW5K8eHZLAwAAAOazPVpTAQAA\nAGAboQIAAAAwilABAAAAGEWoAAAAAIwiVAAAAIB9qKqyZs2a7b+/853vzHnnnfd9reHMM8/MpZde\nOuv9zuSRkgAAALAwXPyc2e3v7M/utskBBxyQyy67LG9605uydOnSPT7F1q1bs2jR/Pz6Pj+rAgAA\ngAVi0aJFOfvss/Pud787b3vb2x6z7/bbb8+rX/3qbN68OcuWLcsll1ySFStW5Mwzz8zhhx+eG264\nIccdd1yWLFmSr33ta7nrrrty66235oILLsh1112XT37yk1m+fHmuuOKKLF68OOeff36uuOKKPPzw\nwznxxBPz/ve/P1W1z96b6Q8AAACwj51zzjlZt25d7rvvvsdsf93rXpczzjgjN910U17xilfk9a9/\n/fZ9t956az7zmc/kXe96V5Lkq1/9aq666qpcfvnleeUrX5nnPve5ufnmm3PQQQflqquu2t7fF7/4\nxXzpS1/Kww8/nCuvvHKfvi+hAgAAAOxjhx56aM4444xcdNFFj9n++c9/Pi9/+cuTJKeffnquvfba\n7fte/OIXZ//999/++6mnnprFixdn1apVeeSRR3LKKackSVatWpXbbrstSXLNNdfkhBNOyKpVq3L1\n1Vfnlltu2afvS6gAAAAA3wfnnntu1q5dm4ceeminbaZOVTj44IMfs++AAw5Ikuy3335ZvHjx9rb7\n7bdftm7dmi1btuS1r31tLr300tx8880566yzsmXLln3wTr5LqAAAAADfB4cffnhe8pKXZO3atdu3\nnXjiifnIRz6SJFm3bl1OPvnk0f1vCxCWLl2aBx98cJ887WE6oQIAAAB8n6xZsyZ333339t8vuuii\nXHLJJTnmmGPyoQ99KBdeeOHovg877LCcddZZWbVqVU477bQcf/zxs1HyLlV37/OT7Mjq1at7/fr1\nc3LuvbHyt6+a6xIAmKHb3v7CuS4BgJk67wlzXQEL1MYXfDRHP+WH5q6AJx87d+eeoY0bN+boo49+\nzLaq2tDdq3d3rJEKAAAAwChCBQAAAGAUoQIAAAAwilABAACABawzV2sJPh7s7WcjVAAAAGDBOvC+\nv8s9D20VLOxAd+eee+7JgQceOLqPRbNYDwAAAMwrR17/jmzKG7P5CT+SpL7/Bdy38ft/zj1w4IEH\n5sgjjxx9vFABAACABWvxt+/NU69709wVcN59c3fu7wPTHwAAAIBRhAoAAADAKEIFAAAAYBShAgAA\nADCKUAEAAAAYRagAAAAAjCJUAAAAAEYRKgAAAACjCBUAAACAUYQKAAAAwChCBQAAAGAUoQIAAAAw\nilABAAAAGEWoAAAAAIwiVAAAAABGESoAAAAAowgVAAAAgFGECgAAAMAoQgUAAABgFKECAAAAMIpQ\nAQAAABhFqAAAAACMIlQAAAAARhEqAAAAAKMIFQAAAIBRhAoAAADAKEIFAAAAYBShAgAAADCKUAEA\nAAAYRagAAAAAjLLbUKGqjqqqa6pqY1XdUlVv2EGbJ1TVFVX110ObV+2bcgEAAID5YtEM2mxNsqa7\nr6+qJUk2VNWnu/vLU9qck+TL3f2iqlqW5G+qal13f3tfFA0AAADMvd2OVOjuu7r7+uH1A0k2Jlk+\nvVmSJVVVSQ5J8s1MwggAAABggZrJSIXtqmplkmOTfGHarvcm+XiSO5MsSfLS7n50FuoDAAAA5qkZ\nL9RYVYck+ViSc7v7/mm7X5DkxiRPTvLMJO+tqkN30MfZVbW+qtZv3rx5L8oGAAAA5tqMQoWqWpxJ\noLCuuy/bQZNXJbmsJ/42ydeS/Pj0Rt19cXev7u7Vy5Yt25u6AQAAgDk2k6c/VJK1STZ29wU7afb3\nSZ43tP/hJE9P8nezVSQAAAAw/8xkTYWTkpye5OaqunHY9uYkK5Kku9+X5HeS/EFV3Zykkryxu+/e\nB/UCAAAA88RuQ4XuvjaToGBXbe5M8vzZKgoAAACY/2a8UCMAAADAVEIFAAAAYBShAgAAADCKUAEA\nAAAYRagAAAAAjCJUAAAAAEYRKgAAAACjCBUAAACAUYQKAAAAwChCBQAAAGAUoQIAAAAwilABAAAA\nGEWoAAAAAIwiVAAAAABGESoAAAAAowgVAAAAgFGECgAAAMAoQgUAAABgFKECAAAAMIpQAQAAABhF\nqAAAAACMIlQAAAAARhEqAAAAAKMIFQAAAIBRhAoAAADAKEIFAAAAYBShAgAAADCKUAEAAAAYRagA\nAAAAjCJUAAAAAEYRKgAAAACjCBUAAACAUYQKAAAAwChCBQAAAGAUoQIAAAAwilABAAAAGEWoAAAA\nAIwiVAAAAABGESoAAAAAowgVAAAAgFGECgAAAMAoQgUAAABgFKECAAAAMIpQAQAAABhFqAAAAACM\nIlQAAAAARhEqAAAAAKMIFQAAAIBRhAoAAADAKEIFAAAAYBShAgAAADDKbkOFqjqqqq6pqo1VdUtV\nvWEn7Z5TVTcObf777JcKAAAAzCeLZtBma5I13X19VS1JsqGqPt3dX97WoKoOS/JfkpzS3X9fVT+0\nj+oFAAAA5ondjlTo7ru6+/rh9QNJNiZZPq3Zy5Nc1t1/P7T7xmwXCgAAAMwve7SmQlWtTHJski9M\n2/W0JE+sqs9W1YaqOmMnx59dVeurav3mzZvH1AsAAADMEzMOFarqkCQfS3Jud98/bfeiJD+Z5IVJ\nXpDk31XV06b30d0Xd/fq7l69bNmyvSgbAAAAmGszWVMhVbU4k0BhXXdftoMmm5Lc3d0PJXmoqv4i\nyU8kuXXWKgUAAADmlZk8/aGSrE2ysbsv2Emzy5P8dFUtqqofTHJCJmsvAAAAAAvUTEYqnJTk9CQ3\nV9WNw7Y3J1mRJN39vu7eWFV/luSmJI8m+UB3f2lfFAwAAADMD7sNFbr72iQ1g3a/m+R3Z6MoAAAA\nYP7bo6c/AAAAAGwjVAAAAABGESoAAAAAowgVAAAAgFGECgAAAMAoQgUAAABgFKECAAAAMIpQAQAA\nABhFqAAAAACMIlQAAAAARhEqAAAAAKMIFQAAAIBRhAoAAADAKEIFAAAAYBShAgAAADCKUAEAAAAY\nRagAAAAAjCJUAAAAAEYRKgAAAACjCBUAAACAUYQKAAAAwChCBQAAAGAUoQIAAAAwilABAAAAGEWo\nAAAAAIwiVAAAAABGESoAAAAAowgVAAAAgFGECgAAAMAoQgUAAABgFKECAAAAMIpQAQAAABhFqAAA\nAACMIlQAAAAARhEqAAAAAKMIFQAAAIBRhAoAAADAKEIFAAAAYBShAgAAADCKUAEAAAAYRagAAAAA\njCJUAAAAAEYRKgAAAACjCBUAAACAUYQKAAAAwChCBQAAAGAUoQIAAAAwilABAAAAGEWoAAAAAIwi\nVAAAAABG2W2oUFVHVdU1VbWxqm6pqjfsou3xVfVIVf3q7JYJAAAAzDeLZtBma5I13X19VS1JsqGq\nPt3dX57aqKr2T/KOJH++D+oEAAAA5pndjlTo7ru6+/rh9QNJNiZZvoOmv5HkY0m+MasVAgAAAPPS\nHq2pUFUrkxyb5AvTti9P8stJ3reb48+uqvVVtX7z5s17VikAAAAwr8w4VKiqQzIZiXBud98/bfd7\nkryxux/ZVR/dfXF3r+7u1cuWLdvzagEAAIB5YyZrKqSqFmcSKKzr7st20GR1ko9UVZIsTfLzVbW1\nu/901ioFAAAA5pXdhgo1SQrWJtnY3RfsqE13P3VK+z9IcqVAAQAAABa2mYxUOCnJ6Ulurqobh21v\nTrIiSbp7l+soAAAAAAvTbkOF7r42Sc20w+4+c28KAgAAAB4f9ujpDwAAAADbCBUAAACAUYQKAAAA\nwChCBQAAAGAUoQIAAAAwilABAAAAGEWoAAAAAIwiVAAAAABGESoAAAAAowgVAAAAgFGECgAAAMAo\nQgUAAABgFKECAAAAMIpQAQAAABhFqAAAAACMIlQAAAAARhEqAAAAAKMIFQAAAIBRhAoAAADAKEIF\nAAAAYBShAgAAADCKUAEAAAAYRagAAAAAjCJUAAAAAEYRKgAAAACjCBUAAACAUYQKAAAAwChCBQAA\nAGAUoQIAAAAwilABAAAAGEWoAAAAAIwiVAAAAABGESoAAAAAowgVAAAAgFGECgAAAMAoQgUAAABg\nFKECAAAAMIpQAQAAABhFqAAAAACMIlQAAAAARhEqAAAAAKMIFQAAAIBRhAoAAADAKEIFAAAAYBSh\nAgAAADCKUAEAAAAYRagAAAAAjCJUAAAAAEYRKgAAAACjCBUAAACAUXYbKlTVUVV1TVVtrKpbquoN\nO2jziqq6afj5XFX9xL4pFwAAAJgvFs2gzdYka7r7+qpakmRDVX26u788pc3Xkvxsd/9DVZ2a5OIk\nJ+yDegEAAIB5YrehQnffleSu4fUDVbUxyfIkX57S5nNTDrkuyZGzXCcAAAAwz+zRmgpVtTLJsUm+\nsItmv57kk+NLAgAAAB4PZjL9IUlSVYck+ViSc7v7/p20eW4mocLJO9l/dpKzk2TFihV7XCwAAAAw\nf8xopEJVLc4kUFjX3ZftpM0xST6Q5Je6+54dtenui7t7dXevXrZs2diaAQAAgHlgJk9/qCRrk2zs\n7gt20mZFksuSnN7dt85uiQAAAMB8NJPpDyclOT3JzVV147DtzUlWJEl3vy/JW5IckeS/TDKIbO3u\n1bNfLgAAADBfzOTpD9cmqd20eU2S18xWUQAAAMD8t0dPfwAAAADYRqgAAAAAjCJUAAAAAEYRKgAA\nAACjCBUAAACAUYQKAAAAwChCBQAAAGAUoQIAAAAwilABAAAAGEWoAAAAAIwiVAAAAABGESoAAAAA\nowgVAAAAgFGECgAAAMAoQgUAAABgFKECAAAAMIpQAQAAABhFqAAAAACMIlQAAAAARhEqAAAAAKMI\nFQAAAIBRhAoAAADAKEIFAAAAYBShAgAAADCKUAEAAAAYRagAAAAAjCJUAAAAAEYRKgAAAACjCBUA\nAACAUYQKAAAAwChCBQAAAGAUoQIAAAAwilABAAAAGEWoAAAAAIwiVAAAAABGESoAAAAAowgVAAAA\ngFGECgAAAMAoQgUAAABgFKECAAAAMIpQAQAAABhFqAAAAACMIlQAAAAARhEqAAAAAKMIFQAAAIBR\nhAoAAADAKEIFAAAAYBShAgAAADCKUAEAAAAYRagAAAAAjCJUAAAAAEbZbahQVUdV1TVVtbGqbqmq\nN+ygTVXVRVX1t1V1U1Udt2/KBQAAAOaLRTNoszXJmu6+vqqWJNlQVZ/u7i9PaXNqkh8bfk5I8nvD\nvwAAAMACtduRCt19V3dfP7x+IMnGJMunNfulJH/YE9clOayqnjTr1QIAAADzxkxGKmxXVSuTHJvk\nC9N2LU9yx5TfNw3b7pp2/NlJzk6SFStW7Fml88Rtb3/hXJcAAAALz3n3zXUFwAgzXqixqg5J8rEk\n53b3/dN37+CQ/p4N3Rd39+ruXr1s2bI9qxQAAACYV2YUKlTV4kwChXXdfdkOmmxKctSU349Mcufe\nlwcAAADMVzN5+kMlWZtkY3dfsJNmH09yxvAUiGcnua+779pJWwAAAGABmMmaCiclOT3JzVV147Dt\nzUlWJEl3vy/JJ5L8fJK/TfKtJK+a/VIBAACA+WS3oUJ3X5sdr5kwtU0nOWe2igIAAADmvxkv1AgA\nAAAwlVABAAAAGEWoAAAAAIxzyVElAAADvUlEQVQiVAAAAABGESoAAAAAowgVAAAAgFGECgAAAMAo\nQgUAAABgFKECAAAAMEp199ycuGpzktvn5OR7Z2mSu+e6CJhlrmsWKtc2C5Vrm4XIdc1C9Xi9tp/S\n3ct212jOQoXHq6pa392r57oOmE2uaxYq1zYLlWubhch1zUK10K9t0x8AAACAUYQKAAAAwChChT13\n8VwXAPuA65qFyrXNQuXaZiFyXbNQLehr25oKAAAAwChGKgAAAACjCBVmqKp+v6q+UVVfmutaYLZU\n1VFVdU1VbayqW6rqDXNdE8yGqjqwqv6qqv56uLb//VzXBLOlqvavqhuq6sq5rgVmS1XdVlU3V9WN\nVbV+ruuB2VJVh1XVpVX1leH/3D811zXNNtMfZqiqfibJg0n+sLufMdf1wGyoqicleVJ3X19VS5Js\nSHJad395jkuDvVJVleTg7n6wqhYnuTbJG7r7ujkuDfZaVf1mktVJDu3uX5jremA2VNVtSVZ3991z\nXQvMpqr6YJK/7O4PVNUPJPnB7r53ruuaTUYqzFB3/0WSb851HTCbuvuu7r5+eP1Ako1Jls9tVbD3\neuLB4dfFw48Unce9qjoyyQuTfGCuawFg16rq0CQ/k2RtknT3txdaoJAIFYBBVa1McmySL8xtJTA7\nhiHiNyb5RpJPd7drm4XgPUl+K8mjc10IzLJO8qmq2lBVZ891MTBLfiTJ5iSXDNPWPlBVB891UbNN\nqACkqg5J8rEk53b3/XNdD8yG7n6ku5+Z5Mgkz6oqU9d4XKuqX0jyje7eMNe1wD5wUncfl+TUJOcM\nU4/h8W5RkuOS/F53H5vkoSS/PbclzT6hAvwTN8w3/1iSdd192VzXA7NtGGb42SSnzHEpsLdOSvKL\nw9zzjyT5uar6o7ktCWZHd985/PuNJP8tybPmtiKYFZuSbJoyWvLSTEKGBUWoAP+EDYvZrU2ysbsv\nmOt6YLZU1bKqOmx4fVCSf5nkK3NbFeyd7n5Tdx/Z3SuTvCzJ1d39yjkuC/ZaVR08LBidYWj485N4\n4hqPe939v5LcUVVPHzY9L8mCWxB90VwX8HhRVR9O8pwkS6tqU5K3dvfaua0K9tpJSU5PcvMw9zxJ\n3tzdn5jDmmA2PCnJB6tq/0wC9I92t8fvAcxPP5zkv03udWRRkj/u7j+b25Jg1vxGknXDkx/+Lsmr\n5rieWeeRkgAAAMAopj8AAAAAowgVAAAAgFGECgAAAMAoQgUAAABgFKECAAAAMIpQAQAAABhFqAAA\nAACMIlQAAAAARvn/AUPv6OKj6mRlAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x157fa461e10>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "fig, ax = plt.subplots(1,1) \n",
+    "fig.set_size_inches(18,6)\n",
+    "#plt.xlim(0,n_d.size)\n",
+    "#x_ticks_labels = [\"0\",\"100,000\",\"200,000\",\"300,000\",\"400,000\",\"500,000\"]\n",
+    "#ax.set_xticklabels(x_ticks_labels, fontsize=10)\n",
+    "#ax.set_ylim(1,4)\n",
+    "ax.fill_between(x=[1,2,3],y1=np.ones(3)*2,y2=np.ones(3)*3,label=\"Normal\")\n",
+    "ax.fill_between(x=[5,6],y1=np.ones(2)*2,y2=np.ones(2)*3,label=\"Normal\")\n",
+    "#ax.fill_between(x=range(n_d_c.size),y1=np.ones(n_d_c.size)*2,y2=np.ones(n_d_c.size)*3,where=n_d_c,label=\"Anomaly\")\n",
+    "plt.title(\"Statistic of 10%KDD99 dataset\")\n",
+    "ax.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Int64Index([2, 3, 4], dtype='int64')"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "foo = pd.Series([1,2,3,3,3,4,5,5,6])\n",
+    "foo[foo==3].index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "col = pd.Series(labels)\n",
+    "unique = col.unique()\n",
+    "#fig, ax = plt.subplots(1,1,figsize=(13,6))\n",
+    "\n",
+    "for l in unique:\n",
+    "  #  print(buffer)\n",
+    "    indices = col[col==l].index\n",
+    "    buffer = []\n",
+    "    tmp = indices[0]\n",
+    "    sub = []\n",
+    "    for i in indices[1:]:\n",
+    "        if i-tmp == 1:\n",
+    "            tmp = i\n",
+    "            sub.append(i)\n",
+    "        else:\n",
+    "            tmp = i\n",
+    "            if len(sub)>1:\n",
+    "                buffer.append(sub)\n",
+    "            else:\n",
+    "                sub.clear()\n",
+    "                \n",
+    "            \n",
+    "            \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Int64Index([141508, 141509, 141510, 141511, 141512, 142476, 148153, 397010,\n",
+       "            452000, 452001],\n",
+       "           dtype='int64')"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "indices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[141509, 141510, 141511, 141512, 452001],\n",
+       " [141509, 141510, 141511, 141512, 452001],\n",
+       " [141509, 141510, 141511, 141512, 452001],\n",
+       " [141509, 141510, 141511, 141512, 452001]]"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "buffer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
