--- a/src/Synthetic example (Power demand dataset).ipynb
+++ b/src/Synthetic example (Power demand dataset).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -16,8 +16,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "power = pd.read_csv(\"C:/Users/Bin/Documents/Datasets/EncDec-AD dataset/power_data.txt\",names=[\"power_demand\"])\n"
@@ -25,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -53,8 +55,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "anomalous_indices = [11,12,16,17,19,50]\n",
@@ -65,8 +69,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "label = np.array(['anomaly' for _ in range(51)])\n",
@@ -77,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +92,7 @@
        "(4284, 1)"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,8 +103,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data = pd.concat((pd.DataFrame(sub_power),pd.Series(label)),axis=1)"
@@ -106,11 +114,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#data.to_csv(\"C:/Users/Bin/Documents/Datasets/EncDec-AD dataset/power_data_labeled_unscaled.csv\",header=None,index=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.to_csv(\"C:/Users/Bin/Documents/Datasets/EncDec-AD dataset/power_data_labeled.csv\",header=None,index=None)"
+    "test_set = data[1008:]\n"
    ]
   },
   {
@@ -122,30 +141,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "import tensorflow as tf\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reload power_demand autoencoder from disk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "modelpath_root =\"C:/Users/Bin/Desktop/Thesis/tmp/EncDecADModel_online_init/power_demand/Try4_2_40_84/\"\n",
+    "modelmeta_p = modelpath_root + \"LSTMAutoencoder_power_2_40_84_para.ckpt.meta\"\n",
+    "step_num = 84\n",
+    "hidden_num = 40\n",
+    "batch_num = 2\n",
+    "elem_num = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_set_list = [test_set.iloc[:3192,0].as_matrix().reshape(19,2,84,1)[a] for a in range(19)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'EncDecAD_Train'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-82-4e7fd6817715>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0msys\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0msys\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minsert\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'C:/Users/Bin/DesktopThesis/code/src/Initialization'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mEncDecAD_Train\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mEncDecAD_Train\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'EncDecAD_Train'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Restoring parameters from C:/Users/Bin/Desktop/Thesis/tmp/EncDecADModel_online_init/power_demand/Try4_2_40_84/LSTMAutoencoder_power_2_40_84_para.ckpt\n"
      ]
     }
    ],
    "source": [
-    "import sys\n",
-    "sys.path.insert(0, 'C:/Users/Bin/DesktopThesis/code/src/Initialization')\n",
-    "from EncDecAD_Train import EncDecAD_Train\n",
+    "sess = tf.Session()\n",
+    "saver = tf.train.import_meta_graph(modelmeta_p) # load trained gragh, but without the trained parameters\n",
+    "saver.restore(sess,tf.train.latest_checkpoint(modelpath_root))\n",
+    "graph = tf.get_default_graph()\n",
     "\n",
+    "p_input = graph.get_tensor_by_name(\"p_input:0\")\n",
+    "p_inputs = [tf.squeeze(t, [1]) for t in tf.split(p_input, step_num, 1)] \n",
+    "#        p_is_training = tf.placeholder(tf.bool)\n",
+    "p_is_training = graph.get_tensor_by_name(\"is_training_:0\")\n",
     "\n",
-    "if __name__ ==\"__main__\":\n",
-    "    \n",
-    "    EncDecAD_Train()"
+    "input_= tf.transpose(tf.stack(p_inputs), [1, 0, 2])    \n",
+    "output_ = graph.get_tensor_by_name(\"decoder/output_:0\")\n",
+    "\n",
+    "tensor_mu = graph.get_tensor_by_name(\"mu:0\")\n",
+    "tensor_sigma = graph.get_tensor_by_name(\"sigma:0\")\n",
+    "tensor_threshold = graph.get_tensor_by_name(\"threshold:0\")\n",
+    "\n",
+    "loss_ = graph.get_tensor_by_name(\"decoder/loss:0\")\n",
+    "train_ = graph.get_operation_by_name(\"cond/train_\")\n",
+    "\n",
+    "mu = sess.run(tensor_mu)\n",
+    "sigma = sess.run(tensor_sigma)\n",
+    "threshold = sess.run(tensor_threshold)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_buffer = []\n",
+    "output_buffer = []\n",
+    "for data in test_set_list:\n",
+    "    (input_n, output_n) = sess.run([input_, output_], {p_input: data, p_is_training: False})\n",
+    "    input_buffer.append(input_n)\n",
+    "    output_buffer.append(output_n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "foo = pd.Series(np.array(input_buffer).ravel())\n",
+    "bar = pd.Series(np.array(output_buffer).ravel())\n",
+    "foobar = pd.concat((foo,bar),axis=1)\n",
+    "\n",
+    "foobar.to_csv(\"C:/Users/Bin/Desktop/Thesis/tmp/EncDecADModel_online_init/power_demand/Try4_2_40_84.csv\",header=['input','output'],index=None)"
    ]
   },
   {
