--- a/Thesis/Masterarbeit.tex
+++ b/Thesis/Masterarbeit.tex
@@ -2,7 +2,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage[english]{babel}
-
+\usepackage{amsmath}
 
 \title{Anomaly detection in streaming data using autoencoders}
 \author{B.Sc. Bin Li}
@@ -129,6 +129,7 @@
 
 \input{content/1_introduction}
 \input{content/2_hauptteil}
+\input{content/3_model}
 %APPENIX
 \appendix
 
