--- a/Thesis/content/1_introduction.tex
+++ b/Thesis/content/1_introduction.tex
@@ -1,6 +1,4 @@
 \chapter{Introduction}
 \label{chap:Introduction}
 
-
-Der Reiseführer  hat eine sehr schöne Theorie zur Komplexität des Universums:
-
+Anomaly detection is an important 
