--- a/src/Synthetic example/Synthetic example (Retrain when prediction performance bad)(updating)-Copy1.ipynb
+++ b/src/Synthetic example/Synthetic example (Retrain when prediction performance bad)(updating)-Copy1.ipynb
@@ -23,7 +23,7 @@
    },
    "outputs": [],
    "source": [
-    "power = pd.read_csv(\"C:/Users/Bin/Documents/Datasets/EncDec-AD dataset/power_data_labeled.csv\",names=[\"power_demand\",\"label\"])\n"
+    "power = pd.read_csv(\"C:/Users/Bin/Documents/Datasets/EncDec-AD dataset/power_data_labeled.csv\",names=[\"power_demand\",\"label\"])"
    ]
   },
   {
@@ -536,7 +536,9 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "foo = pd.Series(errBuffer)"
