--- a/Thesis/Masterarbeit.tex
+++ b/Thesis/Masterarbeit.tex
@@ -126,14 +126,19 @@
 \makeatother
 
 %%%%%%%%%%%%%%%%%%%% MAINPART%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
+\input{content/0_abstract}
 \input{content/1_introduction}
-\input{content/2_hauptteil}
-\input{content/3_model}
+\input{content/2_relatedworks}
+\input{content/3_prelimitaries}
+\input{content/4_proposedmodel}
+\input{content/5_experimentalsetup}
+\input{content/6_experiementresults}
+\input{content/7_conclusion}
 %APPENIX
 \appendix
 
 %REFERENCE
+\bibliographystyle{plain}
 \bibliography{referenzen}
 
 \end{document}
