--- a/Thesis/referenzen.bib
+++ b/Thesis/referenzen.bib
@@ -1,8 +1,47 @@
-@book{adams1995hitchhiker,
-  title={The Hitchhiker's Guide to the Galaxy},
-  author={Adams, D.},
-  isbn={9781417642595},
-  url={http://books.google.com/books?id=W-xMPgAACAAJ},
-  year={1995},
-  publisher={San Val}
+@article{seq2seq,
+	author={Ilya Sutskever and Oriol Vinyals and Quoc V. Le},
+	title = {Sequence to Sequence Learning with Neural Networks},
+	year = {2014}
+}
+
+@article{hierarchicalseq2seq,
+	author={Jiwei Li and Minh-Thang Luong and Dan Jurafsky},
+	title = {A Hierarchical Neural Autoencoder for Paragraphs and Documents},
+	year = {2015}
+}
+
+@article{phraserepresentation,
+	author={Kyunghyun Cho and Bart van Merrienboer and Caglar Gulcehre and Dzmitry Bahdanau and Fethi Bougares Holger Schwenk and Yoshua Bengio},
+	title = {Learning Phrase Representations using RNN Encoder–Decoder for Statistical Machine Translation},
+	year = {2014}
+}
+
+@article{eps,
+	author={Marco Martinelli and Enrico Tronci and Giovanni Dipoppa and Claudio Balducelli2},
+	title = {Electric Power System Anomaly Detection Using Neural Networks},
+	year = {2004}
+}
+
+@article{dimensionalityreduction,
+	author={Mayu Sakurada and Takehisa Yairi},
+	title = {Anomaly Detection Using Autoencoders with Nonlinear Dimensionality Reduction},
+	year = {2014}
+}
+
+@article{lstmad,
+	author={Pankaj Malhotra and Lovekesh Vig and Gautam Shroff and Puneet Agarwal},
+	title = {Long Short Term Memory Networks for Anomaly Detection in Time Series},
+	year = {2015}
+}
+
+@article{encdecad,
+	author={Pankaj Malhotra and Anusha Ramakrishnan and Gaurangi Anand and Lovekesh Vig and Puneet Agarwal and Gautam Shroff},
+	title = {LSTM-based Encoder-Decoder for Multi-sensor Anomaly Detection},
+	year = {2016}
+}
+
+@article{timenet,
+	author={Pankaj Malhotra and Vishnu TV and Lovekesh Vig and Puneet Agarwal and Gautam Shroff},
+	title = {TimeNet: Pre-trained deep recurrent neural network for time series classication},
+	year = {2017}
 }
