--- a/Thesis/Masterarbeit.tex
+++ b/Thesis/Masterarbeit.tex
@@ -20,6 +20,11 @@
 \usepackage{amssymb}							% provides mathmatical math symbols such as dots, arrows, etc.
 \usepackage{amsmath}							% provides align environment
 \usepackage{listings}
+\usepackage{caption}
+\usepackage{subcaption}
+\usepackage{mathtools}
+
+
 \lstset{captionpos=b,frame=single}
 \usepackage[german]{fancyref}
 %% for fancy refereing to listings.
