--- a/Thesis/referenzen.bib
+++ b/Thesis/referenzen.bib
@@ -45,3 +45,31 @@
 	title = {TimeNet: Pre-trained deep recurrent neural network for time series classication},
 	year = {2017}
 }
+
+@article{online,
+	author={Guanyu Zhou and Kihyuk Sohn and Honglak Lee},
+	title = {Online Incremental Feature Learning with Denoising Autoencoder},
+	year = {2012}
+}
+
+@article{threaded,
+	author={Yue Dong and Nathalie Japkowicz},
+	title = {Threaded ensembles of autoencoders for stream learning},
+	year = {2017}
+}
+
+@article{deep,
+	author={Michiel Hermans and Benjamin Schrauwen},
+	title = {Training and Analyzing Deep Recurrent Neural Networks},
+	year = {2013}
+}
+
+
+
+
+
+
+
+
+
+
